# insta-cmd

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: 1-bug.yml
.github/workflows/: tests.yml
examples/: hello.rs
src/: cargo.rs  lib.rs  macros.rs  spawn.rs
src/snapshots/: insta_cmd__basic.snap  insta_cmd__command.snap  insta_cmd__env.snap  insta_cmd__env_remove_vs_empty.snap  insta_cmd__failure.snap  insta_cmd__named_snapshot_with_trailing_comma.snap  insta_cmd__pass_stdin.snap  insta_cmd__stdin.snap  insta_cmd__trailing_comma_one_arg.snap
