[package]
name = "insta-cmd"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { version = "1.16.0", path = "../insta" }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
