[package]
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "A command line extension to the insta testing library for Rust"
edition = "2021"
homepage = "https://insta.rs/"
keywords = ["snapshot", "cmd", "trycmd", "assert-cmd"]
license = "Apache-2.0"
name = "insta-cmd"
readme = "README.md"
repository = "https://github.com/mitsuhiko/insta-cmd"
rust-version = "1.64.0"
version = "0.6.0"

[dependencies]
insta = { version = "1.29.0", features = ["serde"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
